--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 									<input type="radio" id="search-radio__company" name="search-radio__radio" value="company" />
 									<label for="search-radio__company">会社名</label>
 								</div>
-								<div>
+								<div class="ml50">
 									<input type="radio" id="search-radio__news" name="search-radio__radio" value="keyword" checked="checked"/>
 									<label for="search-radio__keyword">ニュース・お知らせ</label>
 								</div>
