--- a/index.html
+++ b/index.html
@@ -135,6 +135,95 @@
 #header-inner__navi li ul li a.menu1{
   width:147px
 }
+
+/* 直近の企業ニュース用スタイル */
+.latest-news {
+  margin-top: 30px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 25px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.latest-news__title {
+  font-size: 16px;
+  font-weight: 700;
+  color: #333;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #4487e1;
+}
+
+.latest-news__list {
+  list-style: none;
+}
+
+.latest-news__item {
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  border-radius: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  transition: background-color 0.2s ease;
+}
+
+.latest-news__item:hover {
+  background-color: #f8f9fa;
+}
+
+.latest-news__item:last-child {
+  margin-bottom: 0;
+}
+
+.news-date {
+  color: #666;
+  font-size: 13px;
+  margin-right: 15px;
+  min-width: 85px;
+}
+
+.news-title {
+  color: #4487e1;
+  font-weight: 500;
+  font-size: 14px;
+  margin-right: 15px;
+  flex: 1;
+}
+
+.news-company {
+  color: #555;
+  font-size: 13px;
+  background-color: #f0f2f5;
+  padding: 4px 10px;
+  border-radius: 4px;
+  white-space: nowrap;
+}
+
+/* レスポンシブ対応 */
+@media screen and (max-width: 768px) {
+  .latest-news {
+    padding: 20px 15px;
+  }
+
+  .latest-news__item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 12px;
+  }
+  
+  .news-date, .news-title {
+    margin-bottom: 8px;
+    margin-right: 0;
+  }
+  
+  .news-company {
+    margin-top: 5px;
+  }
+} 
 </style>
 </head>
 
