--- a/news_result.html
+++ b/news_result.html
@@ -368,7 +368,7 @@ li.logged, li.logout{
 			<div id="breadcrumb" class="clearfix">
 				<ul class="breadcrumb__list flex" itemscope="" itemtype="https://schema.org/BreadcrumbList">
 					<li itemscope="" itemprop="itemListElement" itemtype="https://schema.org/ListItem"><a href="/" class="home" itemprop="item"><span itemprop="name">トップ</span></a><span class="icon-arrow__small"></span></li>
-					<li itemscope="" itemprop="itemListElement" itemtype="https://schema.org/ListItem"><span itemprop="name">会社を探す</span></li>
+					<li itemscope="" itemprop="itemListElement" itemtype="https://schema.org/ListItem"><span itemprop="name">ニュースを探す</span></li>
 				</ul>
 			</div>
 		</div>
