--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   border-radius: 8px;
   padding: 25px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  /* text-align: center; */
 }
 
 .latest-news__title {
