--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
   width:147px
 }
 
-/* 直近の企業ニュース用スタイル */
+/* 直近の企業ニュース用スタイル - 硬い印象に修正 */
 .latest-news {
   margin-top: 30px;
-  background-color: #fff;
-  border-radius: 8px;
+  background-color: #f8f9fa;
+  border-radius: 4px;
   padding: 25px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* text-align: center; */
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 }
 
 .latest-news__title {
@@ -152,7 +151,8 @@
   color: #333;
   margin-bottom: 20px;
   padding-bottom: 10px;
-  border-bottom: 2px solid #4487e1;
+  border-bottom: 1px solid #4487e1;
+  text-align: left;
 }
 
 .latest-news__list {
@@ -160,19 +160,20 @@
 }
 
 .latest-news__item {
-  padding: 15px;
-  margin-bottom: 10px;
+  padding: 12px 15px;
+  margin-bottom: 8px;
   background-color: #fff;
-  border: 1px solid #e0e0e0;
-  border-radius: 6px;
+  border: 1px solid #ddd;
+  border-left: 3px solid #4487e1;
+  border-radius: 0;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   transition: background-color 0.2s ease;
 }
 
 .latest-news__item:hover {
-  background-color: #f8f9fa;
+  background-color: #f5f7fa;
 }
 
 .latest-news__item:last-child {
@@ -180,14 +181,16 @@
 }
 
 .news-date {
-  color: #666;
-  font-size: 13px;
+  color: #555;
+  font-size: 12px;
   margin-right: 15px;
   min-width: 85px;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 500;
 }
 
 .news-title {
-  color: #4487e1;
+  color: #333;
   font-weight: 500;
   font-size: 14px;
   margin-right: 15px;
@@ -195,14 +198,36 @@
 }
 
 .news-company {
-  color: #555;
-  font-size: 13px;
-  background-color: #f0f2f5;
-  padding: 4px 10px;
-  border-radius: 4px;
+  color: #444;
+  font-size: 12px;
+  background-color: #eef1f5;
+  padding: 3px 8px;
+  border-radius: 2px;
   white-space: nowrap;
+  border: 1px solid #e0e4e9;
 }
 
+/* レスポンシブ対応 */
+@media screen and (max-width: 768px) {
+  .latest-news {
+    padding: 20px 15px;
+  }
+
+  .latest-news__item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 12px;
+  }
+  
+  .news-date, .news-title {
+    margin-bottom: 8px;
+    margin-right: 0;
+  }
+  
+  .news-company {
+    margin-top: 5px;
+  }
+}
 /* レスポンシブ対応 */
 @media screen and (max-width: 768px) {
   .latest-news {
