--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
   border-radius: 4px;
   padding: 25px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
+  width: 80%;
 }
 
 .latest-news__title {
