--- a/news_result.html
+++ b/news_result.html
@@ -118,7 +118,8 @@
 }
 
 .result-area2 .news-category {
-  background-color: #4487e1;
+  background-color: black;
+  /* #4487e1; */
   color: #fff;
   font-size: 12px;
   font-weight: 500;
@@ -166,7 +167,8 @@
 }
 
 .result-area2 .news-url a {
-  color: #4487e1;
+  color: black;
+  /* #4487e1; */
   text-decoration: none;
   font-size: 13px;
 }
