--- a/news_result.html
+++ b/news_result.html
@@ -194,7 +194,8 @@
 }
 
 .result-area2 .btn-similar {
-  background-color: #4487e1;
+  background-color: black;
+  /* #4487e1; */
   color: #fff;
 }
 
